--- a/pipes-shell.cabal
+++ b/pipes-shell.cabal
@@ -60,6 +60,7 @@ library
 
   -- Other library packages from which modules are imported.
   build-depends:   base >=4.5 && <4.8,
+                   data-default >= 0.5 && <0.6,
                    stm >=2.4 && <2.5,
                    process >=1.2 && <1.3,
                    pipes >= 4.0.1 && <5,
@@ -90,6 +91,7 @@ test-suite spec
 
   -- Other library packages from which modules are imported.
   build-depends:   base >=4.5 && <4.8,
+                   data-default >= 0.5 && <0.6,
                    stm >=2.4 && <2.5,
                    process >=1.2 && <1.3,
                    pipes >= 4.0.1 && <5,
